hw08/files/deploy_1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: index
        configMap:
          name: index
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
          - containerPort: 80
        volumeMounts:
        - name: index
          mountPath: /usr/share/nginx/html

      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8080
